--- a/gui/strf_main.ui
+++ b/gui/strf_main.ui
@@ -1420,6 +1420,9 @@ p, li { white-space: pre-wrap; }
             <property name="orientation">
              <enum>Qt::Vertical</enum>
             </property>
+            <property name="sizeType">
+             <enum>QSizePolicy::Expanding</enum>
+            </property>
             <property name="sizeHint" stdset="0">
              <size>
               <width>20</width>
@@ -2710,6 +2713,13 @@ p, li { white-space: pre-wrap; }
               </item>
               <item row="0" column="2">
                <widget class="QDateEdit" name="dateEdit1">
+                <property name="date">
+                 <date>
+                  <year>1900</year>
+                  <month>1</month>
+                  <day>1</day>
+                 </date>
+                </property>
                 <property name="minimumDate">
                  <date>
                   <year>1900</year>
@@ -2723,19 +2733,19 @@ p, li { white-space: pre-wrap; }
                 <property name="calendarPopup">
                  <bool>true</bool>
                 </property>
-                <property name="date">
-                 <date>
-                  <year>1900</year>
-                  <month>1</month>
-                  <day>1</day>
-                 </date>
-                </property>
                </widget>
               </item>
               <item row="0" column="4">
                <widget class="QDateEdit" name="dateEdit2">
                 <property name="correctionMode">
                  <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+                </property>
+                <property name="date">
+                 <date>
+                  <year>2099</year>
+                  <month>1</month>
+                  <day>1</day>
+                 </date>
                 </property>
                 <property name="maximumDate">
                  <date>
@@ -2756,13 +2766,6 @@ p, li { white-space: pre-wrap; }
                 </property>
                 <property name="calendarPopup">
                  <bool>true</bool>
-                </property>
-                <property name="date">
-                 <date>
-                  <year>2099</year>
-                  <month>1</month>
-                  <day>1</day>
-                 </date>
                 </property>
                </widget>
               </item>
@@ -2937,9 +2940,6 @@ p, li { white-space: pre-wrap; }
             </property>
             <property name="horizontalScrollBarPolicy">
              <enum>Qt::ScrollBarAsNeeded</enum>
-            </property>
-            <property name="sizeAdjustPolicy">
-             <enum>QAbstractScrollArea::AdjustToContents</enum>
             </property>
             <property name="uniformRowHeights">
              <bool>false</bool>
