--- a/gui/strf_main.ui
+++ b/gui/strf_main.ui
@@ -248,7 +248,7 @@
        <string notr="true"/>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="maintab">
        <attribute name="title">
@@ -855,6 +855,9 @@
              <property name="bottomMargin">
               <number>1</number>
              </property>
+             <item>
+              <widget class="QWidget" name="webview" native="true"/>
+             </item>
             </layout>
            </widget>
           </item>
