--- a/gui/strf_main.ui
+++ b/gui/strf_main.ui
@@ -248,7 +248,7 @@
        <string notr="true"/>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="maintab">
        <attribute name="title">
@@ -785,6 +785,12 @@
             <property name="sortingEnabled">
              <bool>false</bool>
             </property>
+            <attribute name="headerDefaultSectionSize">
+             <number>200</number>
+            </attribute>
+            <attribute name="headerMinimumSectionSize">
+             <number>100</number>
+            </attribute>
             <attribute name="headerShowSortIndicator" stdset="0">
              <bool>false</bool>
             </attribute>
