backports from master and fixed save dialog

--- a/cgi_ui/views/spgr.html
+++ b/cgi_ui/views/spgr.html
@@ -13,7 +13,7 @@
 &#x2082;  <- 2 as subscript
 &#x2083;  <- 3 as subscript
 -->
-<select id="IT_number">
+<select id="IT_number" title="IT_number">
     <option>  None  </option>
     <option>  1 -> (P1)</option>
     <option>  2 -> (P1&#x0305;)</option>
