--- a/gui/strf_main.ui
+++ b/gui/strf_main.ui
@@ -621,7 +621,7 @@
                 </widget>
                </item>
                <item row="0" column="1">
-                <widget class="QLabel" name="formLabel">
+                <widget class="QLabel" name="SumformLabel">
                  <property name="enabled">
                   <bool>true</bool>
                  </property>
