lattice centering option works

--- a/gui/strf_main.ui
+++ b/gui/strf_main.ui
@@ -1141,7 +1141,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="CeneringSearchComboBox">
+             <widget class="QComboBox" name="CenteringSearchComboBox">
               <property name="maximumSize">
                <size>
                 <width>50</width>
